Fixed vertical align of the suffix.

--- a/PrefixSuffixControl/css/PrefixSuffixControl.css
+++ b/PrefixSuffixControl/css/PrefixSuffixControl.css
@@ -1,7 +1,7 @@
 .Fic\.PrefixSuffixControl .suffix {
     position: absolute;
     left: 0;
-    top: 9px;
+    line-height: 35px;
     color: black;
     margin-left: 14px; 
     font: inherit;
